--- a/Template_Assignment.Rmd
+++ b/Template_Assignment.Rmd
@@ -9,10 +9,14 @@ output: pdf_document
 
 ```{r package_install, include=FALSE}
 install.packages("tidyverse")
+install.packages("readxl")
+install.packages("dplyr")
 ```
 
 ``{r packages}
 require(tidyverse)
+library(dplyr)
+library(readxl)
 # Load necessary libraries
 ``library(dplyr)
 
@@ -45,6 +49,9 @@ Preferably from a URL, but if not, make sure to download the data and store it i
 
 # Load data on health spending  directly from Dropbox (public direct link)
 url <- "https://www.dropbox.com/scl/fi/01df0ly3ornjgcis9kwsk/CHE-per-region.csv?rlkey=nwvmxv33dc3uvp9pnil4tqimk&st=5zgoazd8&dl=1"
+
+# Load data on health coverage  directly from Dropbox (public direct link)
+url <- https://www.dropbox.com/scl/fi/w2km75dq5w2smfprlfnrz/coveragedata.R?rlkey=hfl7yib7q1bzmnrb8h2pjif4w&st=vguu10zv&dl=0
 
 # Read the CSV into a dataframe
 raw_healthspending_data <- read.csv(url)
