--- a/Template_Assignment.Rmd
+++ b/Template_Assignment.Rmd
@@ -13,13 +13,11 @@ install.packages("readxl")
 install.packages("dplyr")
 ```
 
-``{r packages}
+```{r packages}
 require(tidyverse)
-library(dplyr)
-library(readxl)
-# Load necessary libraries
-``library(dplyr)
-
+require(readxl)
+require(dplyr)
+```
 
 # Title Page
 
@@ -48,23 +46,26 @@ Include the following:
 Preferably from a URL, but if not, make sure to download the data and store it in a shared location that you can load the data in from. Do not store the data in a folder you include in the Github repository!
 
 # Load data on health spending  directly from Dropbox (public direct link)
-url <- "https://www.dropbox.com/scl/fi/01df0ly3ornjgcis9kwsk/CHE-per-region.csv?rlkey=nwvmxv33dc3uvp9pnil4tqimk&st=5zgoazd8&dl=1"
+url_spending <- "https://www.dropbox.com/scl/fi/01df0ly3ornjgcis9kwsk/CHE-per-region.csv?rlkey=nwvmxv33dc3uvp9pnil4tqimk&st=5zgoazd8&dl=1"
 
 # Load data on health coverage  directly from Dropbox (public direct link)
-url <- https://www.dropbox.com/scl/fi/w2km75dq5w2smfprlfnrz/coveragedata.R?rlkey=hfl7yib7q1bzmnrb8h2pjif4w&st=vguu10zv&dl=0
+url_coverage <- "https://www.dropbox.com/scl/fi/w2km75dq5w2smfprlfnrz/coveragedata.R?rlkey=hfl7yib7q1bzmnrb8h2pjif4w&st=1gqyv5r8&dl=0"
 
 # Read the CSV into a dataframe
-raw_healthspending_data <- read.csv(url)
+raw_healthspending_data <- read.csv(url_spending)
+
+# Read the XLSX into a dataframe
+df <- read_excel(url_coverage, sheet = "Sheet1")
 
 # Preview the first few rows to check the import
 head(raw_healthspending_data)
-
-midwest is an example dataset included in the tidyverse package
+head(df)
 
 ## 2.2 Provide a short summary of the dataset(s)
 
 ```{r}
-head(dataset)
+head(raw_healthspending_data)
+head(df)
 ```
 
 In this case we see 28 variables, but we miss some information on what units they are in. We also don't know anything about the year/moment in which this data has been captured.
@@ -102,8 +103,27 @@ cleaned_healthspending_data <- cleaned_healthspending_data %>%
     Spending = as.numeric(Spending)
   )
 
+# Filter only WUENIC data from WHO regions and select relevant columns from the immunization dataset:
+cleaned_dtpdata <- df %>%
+  filter(
+    COVERAGE_CATEGORY == "WUENIC",
+    GROUP == "WHO_REGIONS"
+  ) %>%
+  select(Region = NAME, Year = YEAR, Coverage = COVERAGE)
 
-`
+# Ensure Year and Coverage are numeric, and create grouped time periods:
+cleaned_dtpdata <- cleaned_dtpdata %>%
+  mutate(
+    Year = as.numeric(Year),
+    Coverage = as.numeric(Coverage),
+    PeriodGroup = case_when(
+      Year >= 2000 & Year <= 2004 ~ "2000–2004",
+      Year >= 2005 & Year <= 2009 ~ "2005–2009",
+      Year >= 2010 & Year <= 2014 ~ "2010–2014",
+      Year >= 2015 & Year <= 2019 ~ "2015–2019",
+      Year >= 2020 & Year <= 2023 ~ "2020–2023"
+    )
+  )
 
 Please use a separate 'R block' of code for each type of cleaning. So, e.g. one for missing values, a new one for removing unnecessary variables etc.
 
@@ -129,7 +149,16 @@ filter(!is.na(Period)) %>%
     .groups = "drop"
   )
 
-```
+# Summarize to calculate average coverage per region and period:
+DTPcoverage <- cleaned_dtpdata %>%
+  filter(!is.na(PeriodGroup)) %>%
+  group_by(Region, PeriodGroup) %>%
+  summarise(
+    AvgCoverage = mean(Coverage, na.rm = TRUE),
+    .groups = "drop"
+  ) %>%
+  arrange(Region)
+
 
 ## 3.3 Visualize temporal variation
 
