--- a/Template_Assignment.Rmd
+++ b/Template_Assignment.Rmd
@@ -45,6 +45,8 @@ Include the following:
 
 Preferably from a URL, but if not, make sure to download the data and store it in a shared location that you can load the data in from. Do not store the data in a folder you include in the Github repository!
 
+```{r load_data}
+
 # Load data on health spending  directly from Dropbox (public direct link)
 url_spending <- "https://www.dropbox.com/scl/fi/01df0ly3ornjgcis9kwsk/CHE-per-region.csv?rlkey=nwvmxv33dc3uvp9pnil4tqimk&st=5zgoazd8&dl=1"
 
@@ -71,7 +73,7 @@ head(raw_healthspending_data)
 head(df)
 
 ## 2.2 Provide a short summary of the dataset(s)
-
+```
 ```{r}
 head(raw_healthspending_data)
 head(df)
