--- a/Template_Assignment.Rmd
+++ b/Template_Assignment.Rmd
@@ -260,9 +260,12 @@ Here you provide a description of why the plot above is relevant to your specifi
 What is the poverty rate by state?
 
 ```{r visualise_subpopulations}
-dataset$inmetro <- dataset$inmetro %>% as.factor()
+library(ggplot2)
+data("midwest")
+
+midwest$inmetro <- midwest$inmetro %>% as.factor()
 # Boxplot of poverty rate by state using the 'midwest' dataset
-ggplot(dataset, aes(x = inmetro, y = percadultpoverty)) +
+ggplot(midwest, aes(x = inmetro, y = percadultpoverty)) +
   geom_boxplot() +
   labs(
     title = "Distribution of Poverty Rates by Metropolitan status (Midwest counties)",
