--- a/Template_Assignment.Rmd
+++ b/Template_Assignment.Rmd
@@ -255,9 +255,9 @@ ggplot(merged_healthdata_df, aes(x = AvgSpending, y = AvgCoverage)) +
   geom_point( size = 3) +
   geom_smooth(method=lm , color="red", se=FALSE) +
   labs( 
-    title = "Linear relationship between Health Spending and Vaccination Coverage", x = "Average Health Spending", y = "Average Vaccination Coverage"
-        )
-  theme_ipsum()
+    title = "Linear relationship between Health Spending and Vaccination Coverage", x = "Average Health Spending (USD per Capita)", y = "Average Vaccination Coverage (%)"
+        ) 
+ + theme_ipsum()
 
 
 #vaccinatiegraad vergelijken met childdeath & vaccinatiegraad vergelijken met healthspending. Normale lijngrafieken.
