--- a/Template_Assignment.Rmd
+++ b/Template_Assignment.Rmd
@@ -281,42 +281,57 @@ p2 <- ggplot(data, aes(x=my_x, y=my_y)) +
 ## 3.4 Visualize spatial variation
 
 ```{r visualise_map}
-
 install.packages("rnaturalearth")
 install.packages("rnaturalearthdata")
-
+install.packages("sf")
+install.packages("dplyr")
+install.packages("ggplot2")
+install.packages("viridis")
+install.packages("grid")
 
 library(sf)
 library(rnaturalearth)
 library(rnaturalearthdata)
+library(dplyr)
+library(ggplot2)
+library(viridis)
+library(grid)
 
+# Wereld shapefile laden
 world <- ne_countries(scale = "medium", returnclass = "sf")
 
-who_regions_points <- data.frame(
-  Region = c("Africa", "Americas", "Europe", "Eastern Mediterranean", "South-East Asia", "Western Pacific"),
-
-  lon = c(20, -60, 20, 45, 90, 130),
-  lat = c(0, 10, 50, 25, 20, 0),
+# WHO-regio vaccinatiecijfers
+who_region_vaccination <- data.frame(
+  WHORegion = c("Africa", "Americas", "Europe", "Eastern Mediterranean", "South-East Asia", "Western Pacific"),
   VaccinationRate = c(72, 89, 94, 85, 91, 88)
-)  
+)
 
-who_regions_sf <- st_as_sf(who_regions_points, coords = c("lon", "lat"), crs = 4326)
+# WHO-regio's per land (vereenvoudigde mapping)
+# In praktijk zou je dit uit een officiële WHO-tabel halen
+world <- world %>%
+  mutate(
+  WHORegion = case_when(
+    world$region_wb == "Sub-Saharan Africa" ~ "Africa",
+    world$region_wb == "Latin America & Caribbean" ~ "Americas",
+    world$region_wb == "Europe & Central Asia" ~ "Europe",
+    world$region_wb == "Middle East & North Africa" ~ "Eastern Mediterranean",
+    world$region_wb == "South Asia" ~ "South-East Asia",
+    world$region_wb == "East Asia & Pacific" ~ "Western Pacific",
+    TRUE ~ NA_character_
+  )
+)
 
-library(ggplot2)
-ggplot(who_regions_sf) +
-  geom_sf(aes(color = Region), size = 5) +
-  theme_minimal() +
-  labs(title = "WHO Regions (punten)")
+# Voeg vaccinatiecijfers toe
+world <- left_join(world, who_region_vaccination, by = "WHORegion")
 
-
-
-p <- ggplot() +
-  geom_sf(data = world, fill = "gray90", color = "white") +
-  geom_sf(data = who_regions_sf, aes(fill = VaccinationRate), size = 5, shape = 21, color = "black") +
-  theme_void() +
+# Plot choropleth map
+ggplot(world) +
+  geom_sf(aes(fill = VaccinationRate), color = "white", size = 0.2) +
   scale_fill_viridis_c(
-    trans = "log", breaks = c(50, 60, 70, 80, 90),
-    name = "Vaccination Grade",
+    na.value = "gray90",
+    trans = "log",
+    name = "Vaccination Grade (%)",
+    breaks = c(50, 60, 70, 80, 90),
     guide = guide_legend(
       keyheight = unit(3, units = "mm"),
       keywidth = unit(12, units = "mm"),
@@ -327,41 +342,22 @@ p <- ggplot() +
   ) +
   labs(
     title = "Vaccination coverage concentration",
-    subtitle = "Vaccination grade per WHO region"
+    subtitle = "Vaccination grade per WHO region (aggregated to countries)",
+    caption = "Source: WHO Region Aggregates"
   ) +
+  theme_void() +
   theme(
     text = element_text(color = "#22211d"),
     plot.background = element_rect(fill = "#f5f5f2", color = NA),
     panel.background = element_rect(fill = "#f5f5f2", color = NA),
     legend.background = element_rect(fill = "#f5f5f2", color = NA),
-    plot.title = element_text(
-      size = 20, hjust = 0.01, color = "#4e4d47",
-      margin = margin(
-        b = -0.1, t = 0.4, l = 2,
-        unit = "cm"
-      )
-    ),
-    plot.subtitle = element_text(
-      size = 15, hjust = 0.01,
-      color = "#4e4d47",
-      margin = margin(
-        b = -0.1, t = 0.43, l = 2,
-        unit = "cm"
-      )
-    ),
-    plot.caption = element_text(
-      size = 10,
-      color = "#4e4d47",
-      margin = margin(
-        b = 0.3, r = -99, t = 0.3,
-        unit = "cm"
-      )
-    ),
-    legend.position = c(0.7, 0.09)
+    plot.title = element_text(size = 20, hjust = 0.01, color = "#4e4d47"),
+    plot.subtitle = element_text(size = 15, hjust = 0.01, color = "#4e4d47"),
+    plot.caption = element_text(size = 10, color = "#4e4d47"),
+    legend.position = "bottom"
   )
-
-#map per WHO regio de vaccinatiegraad laten zien.
 ```
+
 ## 3.5 Visualize sub-population variation
 
 ```{r visualise_map}
