--- a/Template_Assignment.Rmd
+++ b/Template_Assignment.Rmd
@@ -11,6 +11,12 @@ output: pdf_document
 install.packages("tidyverse")
 install.packages("readxl")
 install.packages("dplyr")
+install.packages(sf)
+install.packages(rnaturalearth)
+install.packages(rnaturalearthdata)
+install.packages(ggplot2)
+install.packages(viridis)
+install.packages(grid)
 ```
 
 ```{r packages}
@@ -281,14 +287,6 @@ p2 <- ggplot(data, aes(x=my_x, y=my_y)) +
 ## 3.4 Visualize spatial variation
 
 ```{r visualise_map}
-install.packages("rnaturalearth")
-install.packages("rnaturalearthdata")
-install.packages("sf")
-install.packages("dplyr")
-install.packages("ggplot2")
-install.packages("viridis")
-install.packages("grid")
-
 library(sf)
 library(rnaturalearth)
 library(rnaturalearthdata)
@@ -297,41 +295,38 @@ library(ggplot2)
 library(viridis)
 library(grid)
 
-# Wereld shapefile laden
 world <- ne_countries(scale = "medium", returnclass = "sf")
 
-# WHO-regio vaccinatiecijfers
-who_region_vaccination <- data.frame(
-  WHORegion = c("Africa", "Americas", "Europe", "Eastern Mediterranean", "South-East Asia", "Western Pacific"),
-  VaccinationRate = c(72, 89, 94, 85, 91, 88)
-)
-
-# WHO-regio's per land (vereenvoudigde mapping)
-# In praktijk zou je dit uit een officiële WHO-tabel halen
 world <- world %>%
   mutate(
-  WHORegion = case_when(
-    world$region_wb == "Sub-Saharan Africa" ~ "Africa",
-    world$region_wb == "Latin America & Caribbean" ~ "Americas",
-    world$region_wb == "Europe & Central Asia" ~ "Europe",
-    world$region_wb == "Middle East & North Africa" ~ "Eastern Mediterranean",
-    world$region_wb == "South Asia" ~ "South-East Asia",
-    world$region_wb == "East Asia & Pacific" ~ "Western Pacific",
-    TRUE ~ NA_character_
+    WHORegion = case_when(
+      region_wb == "Sub-Saharan Africa" ~ "Africa",
+      region_wb == "Latin America & Caribbean" ~ "Americas",
+      region_wb == "Europe & Central Asia" ~ "Europe",
+      region_wb == "Middle East & North Africa" ~ "Eastern Mediterranean",
+      region_wb == "South Asia" ~ "South-East Asia",
+      region_wb == "East Asia & Pacific" ~ "Western Pacific",
+      TRUE ~ NA_character_
+    )
   )
-)
 
-# Voeg vaccinatiecijfers toe
-world <- left_join(world, who_region_vaccination, by = "WHORegion")
+# Zorg dat je merged_health_data hebt van de vorige stappen
+# Filter enkel de vaccinatiegegevens voor de gewenste periode (bijv. 2020–2022)
+coverage_mapdata <- merged_health_data %>%
+  filter(Period == "2020–2022") %>%
+  select(WHORegion = Region, AvgCoverage)
 
-# Plot choropleth map
+# Voeg echte vaccinatiecijfers toe aan wereldkaart
+world <- left_join(world, coverage_mapdata, by = "WHORegion")
+
+# Plot choropleth map met echte vaccinatiecijfers
 ggplot(world) +
-  geom_sf(aes(fill = VaccinationRate), color = "white", size = 0.2) +
+  geom_sf(aes(fill = AvgCoverage), color = "white", size = 0.2) +
   scale_fill_viridis_c(
     na.value = "gray90",
-    trans = "log",
-    name = "Vaccination Grade (%)",
-    breaks = c(50, 60, 70, 80, 90),
+    name = "Avg. Coverage (%)",
+    breaks = c(60, 70, 80, 90, 100),
+    limits = c(60, 100),
     guide = guide_legend(
       keyheight = unit(3, units = "mm"),
       keywidth = unit(12, units = "mm"),
@@ -341,9 +336,9 @@ ggplot(world) +
     )
   ) +
   labs(
-    title = "Vaccination coverage concentration",
-    subtitle = "Vaccination grade per WHO region (aggregated to countries)",
-    caption = "Source: WHO Region Aggregates"
+    title = "DTP3 Vaccination Coverage by WHO Region",
+    subtitle = "Aggregated average for 2020–2022",
+    caption = "Source: WHO datasets (coverage, spending, child deaths)"
   ) +
   theme_void() +
   theme(
