--- a/Template_Assignment.Rmd
+++ b/Template_Assignment.Rmd
@@ -356,29 +356,83 @@ ggplot(world) +
 ## 3.5 Visualize sub-population variation
 
 ```{r visualise_map}
-# continenten indelen op healthspending per capita om vervolgens te vergelijken in vaccinatiegraad en childdeath.
-
-```
-
-What is the poverty rate by state?
-
-
+library(tidyverse)
+library(readxl)
 library(ggplot2)
-data("midwest")
+library(dplyr)
+library(countrycode)
 
-midwest$inmetro <- midwest$inmetro %>% as.factor()
-# Boxplot of poverty rate by state using the 'midwest' dataset
-ggplot(midwest, aes(x = inmetro, y = percadultpoverty)) +
-  geom_boxplot() +
+# continenten indelen op healthspending per capita om vervolgens te vergelijken in vaccinatiegraad en childdeath.
+cleaned_healthspending_data$Continent <- cleaned_healthspending_data$Continent
+cleaned_dtpdata$Continent <- cleaned_dtpdata$Continent
+childdeath_with_period$Continent <- childdeath_with_period$Continent
+
+
+# Filter op jaar 2022 en bereken gemiddelden per 'Continent' (Region)
+# Filter op jaar 2022 en bereken gemiddelden per continent
+spending_2022 <- cleaned_healthspending_data %>%
+  filter(Year == 2022) %>%
+  group_by(Continent) %>%
+  summarise(Spending = mean(Spending, na.rm = TRUE))
+
+coverage_2022 <- cleaned_dtpdata %>%
+  filter(Year == 2022) %>%
+  group_by(Continent) %>%
+  summarise(AvgCoverage = mean(Coverage, na.rm = TRUE))
+
+childdeath_2022 <- childdeath_with_period %>%
+  filter(Year == 2022) %>%
+  group_by(Continent) %>%
+  summarise(AvgChildDeath = mean(Deaths, na.rm = TRUE))
+
+# Combineer alle data op Continent
+combined <- spending_2022 %>%
+  inner_join(coverage_2022, by = "Continent") %>%
+  inner_join(childdeath_2022, by = "Continent")
+
+# Stap 4: Selecteer bottom 3 en top 3 continenten zonder overlap
+combined_sorted <- combined %>% arrange(Spending)
+
+bottom3 <- combined_sorted %>% slice(1:3)
+
+top3 <- combined_sorted %>%
+  filter(!(Continent %in% bottom3$Continent)) %>%
+  slice_tail(n = 3)
+
+selected <- bind_rows(top3, bottom3)
+
+# Zet data lang voor ggplot
+plot_data <- selected %>%
+  pivot_longer(cols = c(Spending, AvgCoverage, AvgChildDeath),
+               names_to = "Metric",
+               values_to = "Value")
+
+# Factorlevels voor nette volgorde in plot
+plot_data$Continent <- factor(plot_data$Continent,
+                             levels = unique(selected$Continent))
+
+# Optioneel: schaal de waarden per Metric tussen 0 en 1
+plot_data <- plot_data %>%
+  group_by(Metric) %>%
+  mutate(Value_scaled = (Value - min(Value)) / (max(Value) - min(Value))) %>%
+  ungroup()
+
+# Plot grouped barplot met geschaalde waarden
+ggplot(plot_data, aes(x = Continent, y = Value_scaled, fill = Metric)) +
+  geom_bar(stat = "identity", position = "dodge") +
+  geom_text(aes(label = round(Value, 2)),
+            position = position_dodge(width = 0.9), vjust = -0.5, size = 3) +
   labs(
-    title = "Distribution of Poverty Rates by Metropolitan status (Midwest counties)",
-    x = "Metropolitan Area",
-    y = "Poverty Rate of Adults (%)"
+    title = "Vergelijking per continent: Gezondheidsuitgaven, Vaccinatiegraad & Kindersterfte (2022) (geschaald)",
+    x = "Continent / Regio",
+    y = "Geschaalde waarde (0-1)"
   ) +
-  theme_minimal() +
-  theme(
-    legend.position = "right"
-  )
+  scale_fill_manual(values = c(
+    Spending = "#1f77b4",
+    AvgCoverage = "#2ca02c",
+    AvgChildDeath = "#d62728"
+  )) +
+  theme_minimal()
 ```
 
 Here you provide a description of why the plot above is relevant to your specific social problem.
